<resources>
    <string name="app_name">CIS454Project1</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="switchy">Switch</string>
    <string name="buy">Buy</string>
    <string name="Sell">Button</string>
    <string name="title">Title</string>
    <string name="booktitle">booktitle</string>
    <string name="pleaseenter">Title:</string>
    <string name="bookauthor">bookauthor</string>
    <string name="author">Author:</string>
    <string name="bookisbn">bookisbn</string>
    <string name="bookprice">bookprice</string>
    <string name="isbn">ISBN:</string>
    <string name="price">Price:</string>
    <string name="confirmlisting">confirmlisting</string>

    <string name="buytextbooktitle">buytextbooktitle</string>
    <string name="textbooktitle">textbooktitle</string>
    <string name="buytextbookprice">buytextbookprice</string>

    <string name="creditcardbuybook">creditcardbuybook</string>
    <string name="creditcard">creditcard</string>
    <string name="addressbuy">addressbuy</string>
    <string name="address">address</string>
    <string name="button">Button</string>
    <string name="title_activity_sellbook">SellbookAct</string>
    <string name="sellbookslot1">Name</string>
    <string name="sellbookslot2">Name</string>
    <string name="sellbookslot3">Name</string>
    <string name="sellbookwelcome">TextView</string>
    <string name="sellbookslot4">Name</string>
    <string name="confirmsell">Button</string>
    <string name="sell_textbook">Sell Textbook</string>
    <string name="buy_textbook">Buy Textbook</string>
    <string name="search">Search by ISBN</string>
    <string name="your_textbook_is_now_listed_for_sale">Your textbook is now listed for sale!</string>
    <string name="dismiss">Dismiss</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_textbook_information_below">Please enter your textbook information below:</string>

    <string name="authorsell">Author</string>
    <string name="isbnsell">ISBN</string>
    <string name="price_xx_xx_format">Price (xx.xx format)</string>
    <string name="confirm_listing">Confirm Listing</string>
</resources>
